<resources>
    <string name="app_name">SazonForaneo</string>

    <string name="editarIP">Editar Inf. Personal</string>
    <string name="misR">Mis recetas</string>
    <string name="saveR">Recetas guardadas</string>
    <string name="modeNoche">Modo noche</string>
    <string name="numeroR">Recetas creadas: </string>
    <string name="infPersonal">Información Personal</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="fechaNaci">Fecha de nacimiento</string>
    <string name="numeroTelef">Numero de telefono</string>
    <string name="save">Guardar</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>