<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PerfilConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@color/baby_orange"
        android:gravity="center"
        >

        <FrameLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/foto_perfil"
            >

            <FrameLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circulo_blanco"
                android:elevation="5dp"
                android:layout_margin="5dp"
                android:layout_gravity="bottom|right"
                >

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lapiz_editar"/>

            </FrameLayout>

        </FrameLayout>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Juana Maria Perez Lopez"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="juana.lopez234465@gmail.com"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeroR"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 20"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/cuadro_redondo_gris"
        android:elevation="5dp"
        >

        <TextView
            android:id="@+id/infoPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:text="@string/editarIP"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/medium_gray"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="25dp"/>
        <TextView
            android:id="@+id/misRecetas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:text="@string/misR"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/medium_gray"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="25dp"/>
        <TextView
            android:id="@+id/recetasGuardadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:text="@string/saveR"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/medium_gray"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="25dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/modeNoche" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/modoNoche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/medium_gray"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="25dp"/>


    </LinearLayout>



</LinearLayout>